# cublade

./: .gitignore  README.md  build_kernels.py  install.sh  main.py  pyproject.toml  setup.py
cublade/: __init__.py  _loader.py  _post_install.py  build_kernels.py
cublade/_kernels/: __init__.py
cublade/benchmark/: __init__.py  core.py  triton_configs_checkers.py
cublade/bindings/: __init__.py
cublade/bindings/cuda/: __init__.py  avgpool1d.py  dequantize_fp8.py  dequantize_int8.py  quantize_fp8.py  quantize_int8.py  wmma.py
cublade/bindings/pooling/: __init__.py  avgpool1d.py
cublade/bindings/triton/: __init__.py  gemv.py  matmul.py  vector_add.py
cublade/kernels/cuda/: avg_pool_1d.cu  wmma.cu
cublade/kernels/cuda/quantization/: dequantize_int8.cu  dequantize_per_tensor_fp8.cu  fp8_pack.cuh  int8_pack.cuh  quantize_int8.cu  quantize_per_tensor_fp8.cu
cublade/kernels/triton/: __init__.py  activations.py  gemv_kernel.py  matmul_kernel.py  vector_add_triton.py
cublade/quantization/: __init__.py  dequantizers.py  linear.py  outlier_utils.py  quantizers.py  tensor.py  utils.py
cublade/utils/: path_utils.py
examples/: avg_pool1d.py  matmul_fp16_fp8.py  quant_dequant_int8.py  vector_add.py
examples/kernels/: gemv.py  matmul_simple.py  wmma_simple.py
examples/quantization/: quant_dequant_fp8.py  quant_dequant_int8.py  w8a16_llm_inference.py  w8a16_toy_model.py
