[build-system]
requires = [
    "setuptools",
    "wheel",
    "ninja",
    "torch",
]
build-backend = "setuptools.build_meta"

[project]
name = "cublade"
version = "0.2.0"
description = "A growing toolbox of GPU kernels. Sharp like a blade."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["setuptools", "wheel", "ninja", "numpy", "pandas", "matplotlib", "triton", "ipykernel", "nvtx"]
