[build-system]
requires = [
    "setuptools",
    "wheel",
    "ninja",
    "torch",
]
build-backend = "setuptools.build_meta"

[project]
name = "cublade"
version = "0.3.0"
description = "A growing toolbox of GPU kernels. Sharp like a blade."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "setuptools",
    "wheel",
    "ninja",
    "numpy",
    "pandas",
    "matplotlib",
    "triton",
    "ipykernel",
    "nvtx",
    "rich",
    "torch",
    "transformers>=4.57.3",
    "accelerate>=1.12.0",
]

# uv-specific: torch comes from PyTorch index, everything else from PyPI
[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
