[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cublade"
version = "0.3.0"
description = "A growing toolbox of GPU kernels. Sharp like a blade."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ninja",
    "numpy",
    "pandas",
    "matplotlib",
    "triton",
    "ipykernel",
    "nvtx",
    "rich",
    "torch",
    "transformers>=4.57.3",
    "accelerate>=1.12.0",
]

[tool.setuptools.packages.find]
include = ["cublade*"]

[tool.setuptools.package-data]
"cublade" = [
    "kernels/cuda/**/*.cu",
    "kernels/cuda/**/*.cuh",
    "kernels/cuda/**/*.h",
]

[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
